render white space correctly

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,6 +61,7 @@ div.story {
   width: 60%;
   z-index: 100;
   background-color : transparent;
+  white-space: pre-wrap;
 }
 
 div.story h6 {
